[gd_scene load_steps=10 format=3 uid="uid://cqx2ju1sbyqv0"]

[ext_resource type="Texture2D" uid="uid://gg1tyf6kdw1n" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_81tgu"]
[ext_resource type="Script" path="res://UI/game_ui.gd" id="1_ryhh4"]
[ext_resource type="Texture2D" uid="uid://yl3cgciyt3hb" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_x26kt"]
[ext_resource type="Texture2D" uid="uid://caha8k0xjyecv" path="res://addons/Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="4_bklry"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbihb"]
texture = ExtResource("1_81tgu")
texture_margin_left = 30.4251
texture_margin_top = 24.0
texture_margin_right = 31.667
texture_margin_bottom = 32.2879
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 120)

[sub_resource type="LabelSettings" id="LabelSettings_la3v7"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n3va8"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2yqt"]
atlas = ExtResource("3_x26kt")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_iotfx"]
atlas = ExtResource("4_bklry")
region = Rect2(40, 48, 56, 56)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ryhh4")

[node name="timer_label" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 8.0
offset_right = 48.0
offset_bottom = 23.0
grow_horizontal = 2
text = "8:50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer_label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_right = -2.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Tempo sobrevivido:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -273.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_dbihb")

[node name="coin_label" type="Label" parent="Panel3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -135.0
offset_top = 5.0
offset_right = -62.0
offset_bottom = 33.0
grow_horizontal = 0
text = "10 "
label_settings = SubResource("LabelSettings_la3v7")
horizontal_alignment = 2

[node name="meat_label" type="Label" parent="Panel3"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 1.0
offset_top = 4.0
offset_right = 75.0
offset_bottom = 32.0
text = "50"
label_settings = SubResource("LabelSettings_n3va8")
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="Panel3"]
layout_mode = 0
offset_left = 75.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_q2yqt")

[node name="TextureRect2" type="TextureRect" parent="Panel3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 5.0
offset_bottom = 72.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_iotfx")
